--- a/index.html
+++ b/index.html
@@ -3,251 +3,363 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Latihan Reading Korea - 40 Soal</title>
+<title>Latihan Reading Korea</title>
 
 <style>
-/* ======================================================
-   BASE STYLE
-====================================================== */
-body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    margin: 0;
-    min-height: 100vh;
-    background: #f5f5f5;
-    color: #333;
+/* ================= BASE ================= */
+body{
+    margin:0;
+    font-family:'Segoe UI',Arial,sans-serif;
+    background:#f4f6f8;
+    color:#333;
+}
+button{
+    width:100%;
+    padding:14px;
+    border:none;
+    border-radius:10px;
+    background:#3f51b5;
+    color:#fff;
+    font-size:1.05em;
+    font-weight:600;
+    cursor:pointer;
+}
+button:hover{background:#283593}
+input{
+    width:100%;
+    padding:14px;
+    margin:10px 0;
+    border-radius:10px;
+    border:2px solid #bbb;
+    font-size:1em;
+}
+#kode{text-transform:uppercase}
+
+/* ================= LOGIN ================= */
+#login-page{
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background:
+      linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+      url('https://raw.githubusercontent.com/airnetcso/eps/main/image/1bg.jpg')
+      center/cover no-repeat fixed;
+}
+.login-box{
+    width:90%;
+    max-width:360px;
+    background:#fff;
+    padding:35px;
+    border-radius:18px;
+    text-align:center;
+    box-shadow:0 12px 35px rgba(0,0,0,.4);
+}
+.login-box h1{margin-bottom:5px;color:#1a237e}
+.login-box p{color:#555}
+
+/* ================= QUIZ ================= */
+#quiz-page{display:none}
+
+/* TIMER */
+.header{
+    position:fixed;
+    top:0;
+    width:100%;
+    background:#fff;
+    padding:12px;
+    box-shadow:0 4px 12px rgba(0,0,0,.1);
+    z-index:1000;
+    display:flex;
+    justify-content:center;
+}
+#timer{
+    background:#4caf50;
+    color:#fff;
+    padding:10px 32px;
+    border-radius:12px;
+    font-size:1.4em;
+    font-weight:bold;
 }
 
-button {
-    width: 100%;
-    padding: 16px;
-    background: #3f51b5;
-    color: #fff;
-    border: none;
-    border-radius: 12px;
-    font-size: 1.1em;
-    font-weight: bold;
-    cursor: pointer;
+/* CONTENT */
+.container{
+    max-width:600px;
+    margin:auto;
+    padding:90px 14px 30px;
+    background:#fff;
 }
-button:hover { background: #283593; }
-
-input {
-    width: 100%;
-    padding: 16px;
-    margin: 12px 0;
-    border-radius: 12px;
-    border: 2px solid #bbb;
-    font-size: 1.05em;
-    box-sizing: border-box;
+.progress{
+    height:16px;
+    background:#d1d5db;
+    border-radius:10px;
+    overflow:hidden;
+    margin-bottom:18px;
 }
-input:focus { border-color: #3f51b5; }
-#kode { text-transform: uppercase; }
-
-/* ======================================================
-   LOGIN PAGE
-====================================================== */
-#login-page {
-    min-height: 100vh;
-    background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)),
-        url('https://raw.githubusercontent.com/airnetcso/eps/main/image/1bg.jpg')
-        center / cover no-repeat fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.progress-bar{
+    height:100%;
+    width:0%;
+    background:#3f51b5;
+}
+#loading{
+    text-align:center;
+    margin:30px 0;
+    font-weight:bold;
 }
 
-.login-container {
-    width: 90%;
-    max-width: 380px;
-    background: rgba(255,255,255,.95);
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow: 0 15px 40px rgba(0,0,0,.4);
-    text-align: center;
+/* ================= QUESTION THEME ================= */
+.question-wrapper{display:none}
+.question-wrapper.active{display:block}
+
+/* passage */
+.card{
+    background:#f9fafb;
+    border-radius:14px;
+    padding:18px;
+    margin-bottom:18px;
+    border:1px solid #e5e7eb;
+}
+.card img,
+.card audio{
+    width:100%;
+    margin-top:12px;
+    border-radius:10px;
 }
 
-.login-container h1 { color:#1a237e; margin-bottom:5px; }
-.login-container h2 { color:#4a148c; margin:25px 0; }
-.login-container p  { color:#555; }
-
-/* ======================================================
-   QUIZ PAGE
-====================================================== */
-#quiz-page { display:none; }
-
-/* Header Timer */
-.header-fixed {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: #fff;
-    box-shadow: 0 4px 15px rgba(0,0,0,.1);
-    padding: 15px;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
+/* question */
+.question-text{
+    font-size:1.1em;
+    font-weight:600;
+    margin-bottom:12px;
 }
 
-.timer {
-    background: #4caf50;
-    color: #fff;
-    padding: 12px 40px;
-    border-radius: 12px;
-    font-size: 1.6em;
-    font-weight: bold;
+/* options */
+.options{
+    display:flex;
+    flex-direction:column;
+    gap:8px; /* TIDAK RENGGANG */
+}
+.option{
+    display:flex;
+    align-items:flex-start;
+    gap:10px;
+    padding:10px 12px;
+    border-radius:10px;
+    border:1.8px solid #e5e7eb;
+    cursor:pointer;
+    background:#fff;
+}
+.option:hover{
+    border-color:#3f51b5;
+    background:#eef2ff;
+}
+.option input{display:none}
+
+/* bulatan angka kecil */
+.num{
+    width:26px;
+    height:26px;
+    border-radius:50%;
+    border:2px solid #3f51b5;
+    color:#3f51b5;
+    font-weight:700;
+    font-size:.95em;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-shrink:0;
 }
 
-/* Content */
-.container {
-    max-width: 600px;
-    margin: auto;
-    padding: 100px 15px 30px;
-    background: #fff;
+/* teks jawaban rata kiri */
+.opt-text{
+    flex:1;
+    font-size:1em;
+    line-height:1.45;
 }
 
-.progress {
-    height: 20px;
-    background: #c5cae9;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-bottom: 20px;
+/* selected */
+.option.selected{
+    background:#e8eaf6;
+    border-color:#3f51b5;
 }
-.progress-bar {
-    height: 100%;
-    width: 0%;
-    background: #3f51b5;
-    transition: width .4s ease;
+.option.selected .num{
+    background:#3f51b5;
+    color:#fff;
 }
 
-#loading {
-    text-align: center;
-    font-size: 1.3em;
-    margin: 40px 0;
-    font-weight: bold;
+/* NAV */
+.nav{
+    display:flex;
+    gap:8px;
+    margin:35px 0;
 }
+.nav button{flex:1}
 
-/* ======================================================
-   QUESTION STYLE
-====================================================== */
-.question-wrapper { display:none; }
-.question-wrapper.active { display:block; }
-
-.box-passage {
-    background: #e3f2fd;
-    padding: 25px;
-    border-radius: 16px;
-    border: 2px solid #bbdefb;
-    margin-bottom: 20px;
-}
-.box-passage img,
-.box-passage audio { width:100%; margin-top:15px; }
-
-.box-question {
-    background: #fff3e0;
-    padding: 25px;
-    border-radius: 16px;
-    border: 2px solid #ffcc80;
-}
-
-.option-item {
-    display: flex;
-    align-items: center;
-    margin: 18px 0;
-    font-size: 1.15em;
-}
-.option-item input { transform: scale(1.5); margin-right: 15px; }
-
-.circle-number {
-    width: 38px;
-    height: 38px;
-    background: #333;
-    color: #fff;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 15px;
-    font-weight: bold;
-}
-
-/* ======================================================
-   NAVIGATION & RESULT
-====================================================== */
-.nav-buttons {
-    display: flex;
-    gap: 10px;
-    margin: 40px 0;
-}
-.nav-buttons button { flex:1; }
-
-#result {
+/* RESULT */
+#result{
     display:none;
-    text-align: center;
-    font-size: 1.7em;
-    padding: 40px;
-    background: #e8f5e9;
-    border-radius: 16px;
-    border: 3px solid #4caf50;
+    padding:30px;
+    text-align:center;
+    background:#e8f5e9;
+    border:3px solid #4caf50;
+    border-radius:14px;
+    font-size:1.5em;
 }
 
-/* ======================================================
-   FOOTER
-====================================================== */
-.footer {
-    text-align: center;
-    padding: 20px;
-    font-size: .9em;
+/* FOOTER */
+.footer{
+    text-align:center;
+    padding:18px;
+    font-size:.85em;
     color:#555;
     border-top:1px solid #ddd;
 }
-.footer strong { color:#1a237e; }
 </style>
 </head>
 
 <body>
 
-<!-- ================= LOGIN ================= -->
+<!-- LOGIN -->
 <div id="login-page">
-    <div class="login-container">
+    <div class="login-box">
         <h1>Latihan Reading Korea</h1>
-        <p>40 Soal • Waktu 50 Menit</p>
-
-        <h2>🔐 Login</h2>
+        <p>40 Soal • 50 Menit</p>
         <input id="username" placeholder="Username">
         <input id="password" type="password" placeholder="Password">
-        <input id="kode" maxlength="6" placeholder="Kode Soal">
+        <input id="kode" placeholder="Kode Soal" maxlength="6">
         <button onclick="login()">Login & Mulai</button>
     </div>
 </div>
 
-<!-- ================= QUIZ ================= -->
+<!-- QUIZ -->
 <div id="quiz-page">
-    <div class="header-fixed">
-        <div class="timer" id="timer">Waktu: 50:00</div>
+    <div class="header">
+        <div id="timer">50:00</div>
     </div>
 
     <div class="container">
-        <div class="progress"><div class="progress-bar" id="progress"></div></div>
+        <div class="progress"><div id="progress" class="progress-bar"></div></div>
         <div id="loading">Memuat soal...</div>
 
         <form id="quiz-form"></form>
 
-        <div class="nav-buttons">
-            <button id="prev" disabled>◄ Sebelumnya</button>
+        <div class="nav">
+            <button id="prev" disabled>◄</button>
             <button id="submit">Submit</button>
-            <button id="next">Berikutnya ►</button>
+            <button id="next">►</button>
         </div>
 
         <div id="result"></div>
     </div>
 
-    <div class="footer">
-        © 2026 <strong>Denzuka - KimJongUn</strong>
-    </div>
+    <div class="footer">© 2026 <strong>Denzuka</strong></div>
 </div>
 
 <script>
-/* ======================================================
-   CONFIG
-====================================================== */
-const validCredentials = {
-    "uus":"123","kimjong2":"kimju456
+const validCredentials={
+ "uus":"123","kimjong2":"kimju456","siswa01":"tryout26",
+ "koreafan":"hanguk789","topik2026":"seoul2026"
+};
+const kodeMapping={
+ "B12345":"soal1.json","A09008":"soal2.json",
+ "W11765":"soal3.json","H66633":"soal4.json"
+};
+const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal";
+const TOTAL=40, TIME=50*60;
+
+let questions=[],answers=Array(TOTAL).fill(null);
+let cur=0,time=TIME,timer,submitted=false,file="";
+
+/* LOGIN */
+function login(){
+ const u=username.value.trim(),p=password.value.trim(),k=kode.value.trim().toUpperCase();
+ if(validCredentials[u]===p && kodeMapping[k]){
+   file=kodeMapping[k];
+   login-page.style.display="none";
+   quiz-page.style.display="block";
+   startTimer(); load();
+ } else alert("Login / kode salah");
+}
+
+/* TIMER */
+function startTimer(){
+ timer=setInterval(()=>{
+  time--;
+  timer.textContent=`${String(time/60|0).padStart(2,0)}:${String(time%60).padStart(2,0)}`;
+  if(time<=120) timer.style.background="#f44336";
+  if(time<=0) submitQuiz(true);
+ },1000);
+}
+
+/* LOAD */
+async function load(){
+ const r=await fetch(`${BASE}/${file}?t=${Date.now()}`);
+ questions=await r.json();
+ render(); loading.style.display="none"; show(0);
+}
+
+/* RENDER */
+function render(){
+ quiz-form.innerHTML="";
+ questions.forEach((q,i)=>{
+  const d=document.createElement("div");
+  d.className="question-wrapper";
+  d.innerHTML=`
+   <div class="card">
+     <p><strong>Passage ${i+1}</strong><br>${q.passage}</p>
+     ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
+     ${q.image?`<img src="${q.image}">`:""}
+   </div>
+   <div class="card">
+     <div class="question-text">${q.question}</div>
+     <div class="options">
+       ${Object.entries(q.options).map(([k,v],n)=>`
+        <label class="option">
+          <input type="radio" name="q${i}" value="${k}">
+          <div class="num">${n+1}</div>
+          <div class="opt-text">${v}</div>
+        </label>`).join("")}
+     </div>
+   </div>`;
+  d.querySelectorAll(".option").forEach(o=>{
+    const r=o.querySelector("input");
+    o.onclick=()=>{
+      d.querySelectorAll(".option").forEach(x=>x.classList.remove("selected"));
+      o.classList.add("selected");
+      r.checked=true;
+      answers[i]=r.value;
+    };
+  });
+  quiz-form.appendChild(d);
+ });
+}
+
+/* NAV */
+function show(n){
+ document.querySelectorAll(".question-wrapper")
+  .forEach((q,i)=>q.classList.toggle("active",i===n));
+ prev.disabled=n===0; next.disabled=n===TOTAL-1;
+ progress.style.width=((n+1)/TOTAL*100)+"%";
+ cur=n; scrollTo(0,0);
+}
+next.onclick=()=>show(cur+1);
+prev.onclick=()=>show(cur-1);
+submit.onclick=()=>confirm("Submit sekarang?")&&submitQuiz();
+
+/* SUBMIT */
+function submitQuiz(t=false){
+ if(submitted) return;
+ submitted=true; clearInterval(timer);
+ let score=0;
+ questions.forEach((q,i)=>answers[i]===q.correct&&score++);
+ const p=Math.round(score/TOTAL*100);
+ result.innerHTML=`
+ <strong>${t?"Waktu Habis":"Selesai"}</strong><br><br>
+ Skor ${score}/${TOTAL} (${p}%)<br><br>
+ ${p>=80?"Mantap 🔥":"Latihan lagi 💪"}`;
+ result.style.display="block";
+ document.querySelector(".nav").style.display="none";
+}
+</script>
+</body>
+</html>
