--- a/index.html
+++ b/index.html
@@ -1,135 +1,184 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Latihan Reading Korea</title>
+
+<style>
+body{
+  margin:0;
+  font-family:Arial,Segoe UI,sans-serif;
+  background:#f4f6f8;
+}
+
+/* LOGIN */
+#login-page{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:#1e293b;
+}
+.login-box{
+  background:#fff;
+  padding:30px;
+  width:90%;
+  max-width:360px;
+  border-radius:16px;
+  text-align:center;
+}
+.login-box input{
+  width:100%;
+  padding:12px;
+  margin:10px 0;
+}
+.login-box button{
+  padding:12px;
+  width:100%;
+  background:#3f51b5;
+  color:#fff;
+  border:none;
+}
+
+/* QUIZ */
+#quiz-page{display:none}
+.header{
+  position:fixed;
+  top:0;
+  width:100%;
+  background:#fff;
+  padding:10px;
+  text-align:center;
+}
+#timer{
+  background:#4caf50;
+  color:#fff;
+  padding:8px 20px;
+  border-radius:10px;
+  display:inline-block;
+}
+.container{
+  max-width:600px;
+  margin:auto;
+  padding:80px 15px;
+  background:#fff;
+}
+
+.option{
+  display:flex;
+  gap:10px;
+  padding:10px;
+  border:1px solid #ccc;
+  margin-bottom:8px;
+  cursor:pointer;
+}
+.num{
+  width:24px;
+  height:24px;
+  border-radius:50%;
+  border:2px solid #3f51b5;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:14px;
+}
+.option.selected{
+  background:#e8eaf6;
+  border-color:#3f51b5;
+}
+.option.selected .num{
+  background:#3f51b5;
+  color:#fff;
+}
+</style>
+</head>
+
+<body>
+
+<!-- LOGIN -->
+<div id="login-page">
+  <div class="login-box">
+    <h2>Login</h2>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
+    <input id="kode" placeholder="Kode Soal">
+    <button onclick="login()">LOGIN</button>
+  </div>
+</div>
+
+<!-- QUIZ -->
+<div id="quiz-page">
+  <div class="header">
+    <div id="timer">50:00</div>
+  </div>
+
+  <div class="container">
+    <div id="quiz-form"></div>
+  </div>
+</div>
+
 <script>
-const validCredentials={
- "uus":"123","kimjong2":"kimju456","siswa01":"tryout26",
- "koreafan":"hanguk789","topik2026":"seoul2026"
-};
-const kodeMapping={
- "B12345":"soal1.json","A09008":"soal2.json",
- "W11765":"soal3.json","H66633":"soal4.json"
-};
-const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal";
-const TOTAL=40, TIME=50*60;
+/* DATA */
+const validCredentials = { "uus":"123" };
+const kodeMapping = { "B12345":"soal1.json" };
+const BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal";
 
-/* STATE */
-let questions=[],answers=Array(TOTAL).fill(null);
-let cur=0,time=TIME;
-let timerInterval=null;
-let submitted=false,file="";
+let time = 50*60;
+let interval = null;
 
-/* ===== LOGIN ===== */
+/* LOGIN */
 function login(){
- const u=document.getElementById("username").value.trim();
- const p=document.getElementById("password").value.trim();
- const k=document.getElementById("kode").value.trim().toUpperCase();
+  const u = document.getElementById("username").value;
+  const p = document.getElementById("password").value;
+  const k = document.getElementById("kode").value.toUpperCase();
 
- if(validCredentials[u]===p && kodeMapping[k]){
-   file=kodeMapping[k];
-
-   document.getElementById("login-page").style.display="none";
-   document.getElementById("quiz-page").style.display="block";
-
-   startTimer();
-   load();
- } else {
-   alert("Username / password / kode salah");
- }
+  if(validCredentials[u]===p && kodeMapping[k]){
+    document.getElementById("login-page").style.display="none";
+    document.getElementById("quiz-page").style.display="block";
+    startTimer();
+    loadDummy();
+  } else {
+    alert("Login salah");
+  }
 }
 
-/* ===== TIMER ===== */
+/* TIMER */
 function startTimer(){
- const timerEl=document.getElementById("timer");
- timerInterval=setInterval(()=>{
-  time--;
-  const m=String(Math.floor(time/60)).padStart(2,"0");
-  const s=String(time%60).padStart(2,"0");
-  timerEl.textContent=`${m}:${s}`;
-
-  if(time<=120) timerEl.style.background="#f44336";
-  if(time<=0) submitQuiz(true);
- },1000);
+  const t = document.getElementById("timer");
+  interval = setInterval(()=>{
+    time--;
+    const m = String(Math.floor(time/60)).padStart(2,"0");
+    const s = String(time%60).padStart(2,"0");
+    t.textContent = `${m}:${s}`;
+  },1000);
 }
 
-/* ===== LOAD ===== */
-async function load(){
- const loading=document.getElementById("loading");
- const res=await fetch(`${BASE}/${file}?t=${Date.now()}`);
- questions=await res.json();
- render();
- loading.style.display="none";
- show(0);
+/* SOAL DUMMY (TES TAMPILAN) */
+function loadDummy(){
+  const form = document.getElementById("quiz-form");
+  form.innerHTML = `
+    <p><b>Pertanyaan:</b> Apa arti kata 냉장고?</p>
+    <div class="option" onclick="select(this)">
+      <div class="num">1</div><div>Kulkas</div>
+    </div>
+    <div class="option" onclick="select(this)">
+      <div class="num">2</div><div>Televisi</div>
+    </div>
+    <div class="option" onclick="select(this)">
+      <div class="num">3</div><div>Mesin cuci</div>
+    </div>
+    <div class="option" onclick="select(this)">
+      <div class="num">4</div><div>AC</div>
+    </div>
+  `;
 }
 
-/* ===== RENDER ===== */
-function render(){
- const form=document.getElementById("quiz-form");
- form.innerHTML="";
- questions.forEach((q,i)=>{
-  const d=document.createElement("div");
-  d.className="question-wrapper";
-  d.innerHTML=`
-   <div class="card">
-     <p><strong>Passage ${i+1}</strong><br>${q.passage}</p>
-     ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
-     ${q.image?`<img src="${q.image}">`:""}
-   </div>
-
-   <div class="card">
-     <div class="question-text">${q.question}</div>
-     <div class="options">
-       ${Object.entries(q.options).map(([k,v],n)=>`
-        <label class="option">
-          <input type="radio" name="q${i}" value="${k}">
-          <div class="num">${n+1}</div>
-          <div class="opt-text">${v}</div>
-        </label>`).join("")}
-     </div>
-   </div>`;
-  
-  d.querySelectorAll(".option").forEach(o=>{
-    const r=o.querySelector("input");
-    o.onclick=()=>{
-      d.querySelectorAll(".option").forEach(x=>x.classList.remove("selected"));
-      o.classList.add("selected");
-      r.checked=true;
-      answers[i]=r.value;
-    };
-  });
-  form.appendChild(d);
- });
-}
-
-/* ===== NAV ===== */
-function show(n){
- document.querySelectorAll(".question-wrapper")
-  .forEach((q,i)=>q.classList.toggle("active",i===n));
- document.getElementById("prev").disabled=n===0;
- document.getElementById("next").disabled=n===TOTAL-1;
- document.getElementById("progress").style.width=((n+1)/TOTAL*100)+"%";
- cur=n;
- window.scrollTo(0,0);
-}
-
-document.getElementById("next").onclick=()=>show(cur+1);
-document.getElementById("prev").onclick=()=>show(cur-1);
-document.getElementById("submit").onclick=()=>confirm("Submit sekarang?")&&submitQuiz();
-
-/* ===== SUBMIT ===== */
-function submitQuiz(timeout=false){
- if(submitted) return;
- submitted=true;
- clearInterval(timerInterval);
-
- let score=0;
- questions.forEach((q,i)=>answers[i]===q.correct&&score++);
- const p=Math.round(score/TOTAL*100);
-
- const result=document.getElementById("result");
- result.innerHTML=`
- <strong>${timeout?"Waktu Habis":"Selesai"}</strong><br><br>
- Skor ${score}/${TOTAL} (${p}%)<br><br>
- ${p>=80?"Mantap 🔥":"Latihan lagi 💪"}`;
- result.style.display="block";
-
- document.querySelector(".nav").style.display="none";
+function select(el){
+  document.querySelectorAll(".option").forEach(o=>o.classList.remove("selected"));
+  el.classList.add("selected");
 }
 </script>
+
+</body>
+</html>
