--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         /* Login Page */
         #login-page {
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg.jpg') center/cover no-repeat fixed;
+            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat fixed;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -249,10 +249,10 @@
             <h1>Latihan Reading Korea</h1>
             <p>40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
             <h2>🔐 Masuk ke Latihan</h2>
-            <input type="text" id="username" placeholder="Username">
-            <input type="password" id="password" placeholder="Password">
-            <input type="text" id="kode" placeholder="Kode Soal" maxlength="6">
-            <button onclick="login()">Login & Mulai</button>
+            <input type="text" id="username" placeholder="Username / 이름">
+            <input type="password" id="password" placeholder="Password / 비밀번호">
+            <input type="text" id="kode" placeholder="Kode Soaㅣ / 시험코드" maxlength="6">
+            <button onclick="login()">MULAI / 시작</button>
         </div>
     </div>
 
@@ -269,16 +269,16 @@
             <form id="quiz-form"></form>
 
             <div class="nav-buttons">
-                <button id="prev" disabled>◄ Sebelumnya</button>
-                <button id="submit">Submit Sekarang</button>
-                <button id="next">Berikutnya ►</button>
+                <button id="prev" disabled>PREV</button>
+                <button id="submit">SUBMIT</button>
+                <button id="next">NEXT</button>
             </div>
 
             <div id="result"></div>
         </div>
 
         <div class="footer">
-            © 2026 <strong>Denzuka - KimJongUn</strong><br>All Rights Reserved.
+            © 2026 <strong>Denzuka - Kim JongUn</strong><br>All Rights Reserved.
         </div>
     </div>
 
@@ -437,3 +437,4 @@
     </script>
 </body>
 </html>
+
